# exmpl-cmake-grpc

proto/: CMakeLists.txt
server/src/: main.cpp
